# nanaimo

./: .gitignore  .sonarcloud.properties  .travis.yml  CONTRIBUTING.rst  LICENSE.rst  README.rst  conf.py  conftest.py  guide.rst  index.rst  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.buildkite/: pipeline.yml  release.sh
.devcontainer/: devcontainer.json  python.Dockerfile
docs/: fixtures.rst  guide.rst  index.rst  lib.rst  nait.rst
docs/css/: custom.css
docs/images/: nanaimo.graffle
docs/static/images/: nanaimo.graffle
docs/templates/: footer.html
src/: conf.py  index.rst  nait  nantest  pytest_nanaimo.py
src/docs/templates/: footer.html
src/nanaimo/: __init__.py  __main__.py  builtin.py  cli.py  config.py  display.py  file.py  fixtures.py  lib.rst  pytest_plugin.py  serial.py  version.py
src/nanaimo/bkprecision/: __init__.py  __main__.py
src/nanaimo/builtin/: __init__.py  gather.py  gtest_over_jlink.py  nanaimo_bar.py  nanaimo_cmd.py  nanaimo_gather.py  nanaimo_scp.py  nanaimo_serial_watch.py  nanaimo_ssh.py  scp.py  serial_log_watch.py
src/nanaimo/connections/: __init__.py  uart.py
src/nanaimo/gtest/: __init__.py
src/nanaimo/instruments/: __init__.py
src/nanaimo/instruments/bkprecision/: __init__.py  __main__.py
src/nanaimo/instruments/jlink/: __init__.py
src/nanaimo/instruments/saleae/: __init__.py
src/nanaimo/instruments/ykush/: __init__.py
src/nanaimo/jlink/: __init__.py
src/nanaimo/parsers/: __init__.py  imu.py
src/nanaimo/parsers/gtest/: __init__.py
src/nanaimo/pytest/: __init__.py  hooks.py  plugin.py
test/: conftest.py  test_artifacts.py  test_bkprecision.py  test_fixture.py  test_instrument_jlink.py  test_nait.py  test_namespace.py  test_nanaimo.py  test_nanaimo_fixture.py  test_nanaimo_serial_watch.py  test_parser_imu.py  test_pytest_plugin.py  test_readlog.py  test_saleae.py  test_serial_log_watch.py  test_subprocess.py  test_uart_monitor.py  test_ykush.py
test/fixtures/: __init__.py  mock_JLinkExe.py  simulators.py  test.cfg  test_build_config_loadfile_swd.jlink  test_math_saturation_loadfile_swd.jlink
test/material/: __init__.py  imu.txt  mock_JLinkExe.py  pg1636.txt  simulators.py  test.jlink  test_build_config.hex  test_math_saturation.hex  test_math_saturation_loadfile_swd.jlink  unicode.py  unicodebig.txt
