[metadata]
name = nanaimo
author = Amazon.com
author_email = dixonsco@amazon.com
url = https://github.com/thirtytwobits/nanaimo
description = Framework for automating tests involving hardware test fixtures.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.rst
keywords = ci, hil, test
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Plugins
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Build Tools
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
install_requires =
    pyserial
    pytest
    pyyaml
    argcomplete

zip_safe = False
python_requires = >=3.5

[options.entry_points]
pytest11 =
    pytest_nanaimo = nanaimo.pytest_plugin
    pytest_nanaimo_bar = nanaimo.builtin.nanaimo_bar
    pytest_nanaimo_scp = nanaimo.builtin.scp
    pytest_nanaimo_gather = nanaimo.builtin.gather
    pytest_gtest_over_jlink = nanaimo.builtin.gtest_over_jlink
    pytest_serial_log_watch = nanaimo.builtin.serial_log_watch
nanaimo = 
    nanaimo_builtin_bar = nanaimo.builtin.nanaimo_bar
    nanaimo_builtin_saleae = nanaimo.instruments.saleae
    nanaimo_builtin_gather = nanaimo.builtin.gather
    nanaimo_builtin_scp = nanaimo.builtin.scp
    nanaimo_builtin_bkprecision = nanaimo.instruments.bkprecision
    nanaimo_builtin_gtest = nanaimo.builtin.gtest_over_jlink
    nanaimo_builtin_serial_log_watch = nanaimo.builtin.serial_log_watch
console_scripts =
    nait = nanaimo.cli:main

[options.packages.find]
where=src

[mypy]
ignore_missing_imports = True
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_context = True
mypy_path = src

[mypy-serial]
ignore_missing_imports = True

[flake8]
max-complexity = 10
max-line-length = 120
doctests = True
statistics = True
show-source = True

[tool:pytest]
log_cli = true
log_cli_level = WARNING

[coverage:run]
branch=True
timid=False
parallel=True
include =
    */nait
    src/nanaimo/*
    .tox/*/site-packages/nanaimo/*

omit = 
    */setup.py
    */conf.py
    */conftest.py

[coverage:paths]
source =
    src
    .tox/*/site-packages
    .tox/*/bin


[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    assert False
    if False:
    if __name__ == .__main__.:

[nanaimo]
test_cfg = 1
log_level = VERBOSE_DEBUG

[nanaimo:test]
cfg = 2

[nanaimo:bk]
port = dummy/port/from/config.cfg
