[metadata]
name = nanaimo
author = Amazon.com
author_email = dixonsco@amazon.com
url = https://github.com/thirtytwobits/nanaimo
description = Framework for automating tests involving hardware test fixtures.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.rst
keywords = ci, hil, test
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Plugins
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Build Tools
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
install_requires =
    pyserial
    pytest
    pytest-asyncio

zip_safe = False
python_requires = >=3.5

[options.entry_points]
pytest11 =
    pytest_nanaimo = nanaimo.pytest.plugin
    pytest_nanaimo_bar = nanaimo.builtin.nanaimo_bar
    pytest_nanaimo_cmd = nanaimo.builtin.nanaimo_cmd
    pytest_nanaimo_scp = nanaimo.builtin.nanaimo_scp
    pytest_nanaimo_ssh = nanaimo.builtin.nanaimo_ssh
    pytest_nanaimo_gather = nanaimo.builtin.nanaimo_gather
    pytest_nanaimo_serial_watch = nanaimo.builtin.nanaimo_serial_watch
    pytest_nanaimo_instr_bkprecision = nanaimo.instruments.bkprecision
    pytest_nanaimo_instr_saleae = nanaimo.instruments.saleae
    pytest_nanaimo_display = nanaimo.display
    pytest_gtest_over_jlink = nanaimo.builtin.gtest_over_jlink
nanaimo = 
    nanaimo_builtin_bar = nanaimo.builtin.nanaimo_bar
    nanaimo_builtin_saleae = nanaimo.instruments.saleae
    nanaimo_builtin_gather = nanaimo.builtin.nanaimo_gather
    nanaimo_builtin_cmd = nanaimo.builtin.nanaimo_cmd
    nanaimo_builtin_scp = nanaimo.builtin.nanaimo_scp
    nanaimo_builtin_ssh = nanaimo.builtin.nanaimo_ssh
    nanaimo_builtin_bkprecision = nanaimo.instruments.bkprecision
    nanaimo_builtin_gtest = nanaimo.builtin.gtest_over_jlink
    nanaimo_builtin_nanaimo_serial_watch = nanaimo.builtin.nanaimo_serial_watch
    nanaimo_display = nanaimo.display
console_scripts =
    nait = nanaimo.cli:main


[options.packages.find]
where=src


[coverage:run]
branch=True
timid=False
parallel=True
include =
    */nait
    src/nanaimo/*
    .tox/*/site-packages/nanaimo/*

omit = 
    */setup.py
    */conf.py
    */conftest.py


[coverage:paths]
source =
    src
    .tox/*/site-packages
    .tox/*/bin


[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    assert False
    if False:
    if __name__ == .__main__.:


[nanaimo]
test_cfg = 1
log_level = VERBOSE_DEBUG
environ =
    NANAIMO_UNITTEST = This is a nanaimo unittest environment.


[nanaimo:test]
cfg = 2


[nanaimo:bk]
port = dummy/port/from/config.cfg


[nanaimo:yep]
pantilt_port = 1
imu_port = 2
